[UPDATE] we could use cf workers vpc again. (re)
